--- a/Week06/W6.md
+++ b/Week06/W6.md
@@ -6,6 +6,22 @@ footer: 統計学入門 | Intro to Statistics ![width:30px](../images/yoh%20with
 paginate: true
 ---
 
+<style>
+small {font-size:0.6em}
+medium {font-size:0.8em}
+large {font-size:2em}
+xlarge {font-size:4em}
+gray {padding:20px;background-color:whitesmoke;font-weight:800}
+plum {padding:20px;background-color:plum;line-height:3;font-weight:800}
+t1 { font-size:4em;font-weight:100;line-height:1}
+xl { font-size:2.5em;font-weight:100;line-height:1}
+xls { font-size:1.5em;font-weight:100;line-height:1}
+h1,h2,h3,h4,h5{font-family:serif}
+section {font-size:2em;font-weight:300;}
+left {text-align:left;}
+</style>
+
+
 
 # Introduction to Statistics
 #### 統計学入門
@@ -14,6 +30,7 @@ Week 6 | November 3, 2022
 
 
 # <span style="color:white">What's up?</span>😎
+
 <br>
 <br>
 <br>
