--- a/Week09/W9.md
+++ b/Week09/W9.md
@@ -6,12 +6,26 @@ footer: 統計学入門 | Intro to Statistics ![width:30px](../images/yoh%20with
 paginate: true
 ---
 
+<style>
+small {font-size:0.6em}
+medium {font-size:0.8em}
+large {font-size:2em}
+xlarge {font-size:4em}
+gray {padding:20px;background-color:whitesmoke;font-weight:800}
+plum {padding:20px;background-color:plum;line-height:3;font-weight:800}
+t1 { font-size:4em;font-weight:100;line-height:1}
+xl { font-size:2.5em;font-weight:100;line-height:1}
+xls { font-size:1.5em;font-weight:100;line-height:1}
+h1,h2,h3,h4,h5{font-family:serif}
+section {font-size:2em;font-weight:300;}
+left {text-align:left;}
+</style>
 
 
 # Introduction to Statistics
 #### 統計学入門
 
-Week 9 | November 24, 2022
+Week 9 | June 20, 2023
 
 ### <span style="color:white"></span>
 
@@ -146,6 +160,12 @@ CV= σ/μ
 ![Alt text](../images/interactive%20z.png)
 
 https://www.mathsisfun.com/data/standard-normal-distribution-table.html
+
+##
+
+偏差値
+
+
 
 ### 
 では、あなたは？
